--- a/h3i/Cargo.toml
+++ b/h3i/Cargo.toml
@@ -10,9 +10,9 @@ clap = "3"
 env_logger = "0.6"
 inquire = "0.6.2"
 mio = { version = "0.8", features = ["net", "os-poll"] }
-octets = { path = "../../octets" }
-qlog = { version = "0.11.0", path = "../../qlog" }
-quiche = { path = "../../quiche", features = ["qlog", "internal"]}
+octets = { path = "../octets" }
+qlog = { version = "0.11.0", path = "../qlog" }
+quiche = { path = "../quiche", features = ["qlog", "internal"]}
 rand = "0.8.5"
 serde_json = "1"
 serde = "1"
